bk_ida/gccida/g1/read_integral_parameter
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/read_integral_parameter/src/toplev.c:2021:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v3] & 4) != 0 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/read_integral_parameter/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/read_integral_parameter/src/obj/toplev.o] Error 1
